src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Child_Cases__c</fullName>
        <label>Child Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Has_child</fullName>
        <active>true</active>
        <errorConditionFormula>Has_Child__c</errorConditionFormula>
        <errorMessage>It has child</errorMessage>
    </validationRules>
</CustomObject>